objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>AI_Suggested_Score__c</fullName>
        <label>AI Suggested Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conflict_of_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conflict of Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligibility_Declaration__c</fullName>
        <label>Eligibility Declaration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Info__c</fullName>
        <inlineHelpText>AI-flagged missing data</inlineHelpText>
        <label>Missing Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Similar_Experience__c</fullName>
        <label>Similar Experience</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technical_Specs__c</fullName>
        <label>Technical Specs</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tender__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tender</label>
        <referenceTo>Tender__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OFFER-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Tender_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Tender__c)</errorConditionFormula>
        <errorMessage>The Tender cannot be empty</errorMessage>
    </validationRules>
</CustomObject>